bowtie/test/invalid-syntax-examples/no-equals.bowtie
no-equals.bowtie:2:7:
  |
2 | result
  |       ^
unexpected newline
expecting '=' or followup identifier char
